--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <style>
 
         body {
-            background-color: #f0f0f0;
+            background-color: #050505;
         }
         h1 {
-            color: blue;
+            color: rgb(254, 254, 254);
             text-align: center;
         }
         p {
+            color: rgb(254, 254, 254);
             font-family: Arial, sans-serif;
             font-size: 16px;
         }
@@ -22,12 +23,13 @@
     <h1>About Me</h1>
     <p> I am a chef looking for a career change in the direction of DevOps, Cloud Engineering, and Software Development. 
         I have always been interested in making websites and e-commerce. Thanks to FAC for helping me get started. 
-        Since joining the FAC applicants sessions in September i have been learning to use my terminal, git and Github, 
+        Since joining the FAC applicants sessions in September i have been learning to use terminal, git and Github, 
         as well as studying Javascript with Codecademy.  
         I would like to join the Founders and Coders course to push my skills further and find my first role in software development.</p>
     
     <h1>See my work so far</h1>
-    <p>Fenella Foodie website link</p>
+    <p>I have been hosting my website <a href="https://www.fenellafoodie.com">Fenella Foodie</a> for ten years using 
+        first Squarespace and now Shopify. 
     <p>Fenella Foodie Instagram</p>
     <p>YouTube Channel</p>
 
