opening link to Fenella Foodie website in a new window

--- a/index.html
+++ b/index.html
@@ -21,15 +21,11 @@
 
 <body>
     <h1>About Me</h1>
-    <p> I am a chef looking for a career change in the direction of DevOps, Cloud Engineering, and Software Development. 
-        I have always been interested in making websites and e-commerce. Thanks to FAC for helping me get started. 
-        Since joining the FAC applicants sessions in September i have been learning to use terminal, git and Github, 
-        as well as studying Javascript with Codecademy.  
-        I would like to join the Founders and Coders course to push my skills further and find my first role in software development.</p>
+    <p> text here</p>
     
     <h1>See my work so far</h1>
-    <p>I have been hosting my website <a href="https://www.fenellafoodie.com">Fenella Foodie</a> for ten years using 
-        first Squarespace and now Shopify. 
+    <p>I host my website <a href="https://www.fenellafoodie.com" target="_blank">Fenella Foodie</a> using 
+        first Squarespace and now Shopify. more text here. 
     <p>Fenella Foodie Instagram</p>
     <p>YouTube Channel</p>
 
