Added links to third page pong.html

--- a/projects.html
+++ b/projects.html
@@ -8,10 +8,11 @@
     </title>
 
 <body>
-    <a href="./index.html">Home<a/>
-    <a href="./projects.html">Projects<a/>
+    <a href="./index.html">Home</a>
+    <a href="./projects.html">Projects</a>
+    <a href="./pong.html">Play Pong</a>
 
-
+    
 </body>
 
 </head>
