--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 </head>
 
 <body>
-    <a href="./index.html">Home<a/>
-    <a href="./projects.html">Projects<a/>
+    <a href="./index.html">Home</a>
+    <a href="./projects.html">Projects</a>
+    <a href="./pong.html">Play Pong</a>
 
     <h1>About Me</h1>
     <p> text here</p>
