--- a/pong.html
+++ b/pong.html
@@ -18,6 +18,10 @@
     </style>
 </head>
 <body>
+    <a href="./index.html">Home</a>
+    <a href="./projects.html">Projects</a>
+    <a href="./pong.html">Play Pong</a>
+
     <canvas id="pongCanvas"></canvas>
     <script>
         const canvas = document.getElementById('pongCanvas');
