adding game instructions to Pong game and changing body text in index file to centre align.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             color: rgb(254, 254, 254);
             font-family: Arial, sans-serif;
             font-size: 16px;
+            text-align: centre;
         }
     </style>
 </head>
