--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
         body {
             background-color: #050505;
+            text-align: center; 
         }
         h1 {
             color: rgb(254, 254, 254);
@@ -13,9 +14,9 @@
         }
         p {
             color: rgb(254, 254, 254);
+            text-align: center;
             font-family: Arial, sans-serif;
             font-size: 16px;
-            text-align: centre;
         }
     </style>
 </head>
