--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <style>
 
         body {
-            background-color: #050505;
+            background-color: #ffffff;
             text-align: center; 
         }
         h1 {
-            color: rgb(254, 254, 254);
+            color: rgb(0, 0, 0);
             text-align: center;
         }
         p {
-            color: rgb(254, 254, 254);
+            color: rgb(0, 0, 0);
             text-align: center;
             font-family: Arial, sans-serif;
             font-size: 16px;
