--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,20 @@
 <head>
     <title>
     <style>
-        
-
-
+         body {
+            background-color: #ffffff;
+            text-align: center; 
+        }
+        h1 {
+            color: rgb(0, 0, 0);
+            text-align: center;
+        }
+        p {
+            color: rgb(0, 0, 0);
+            text-align: center;
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+        }
     </style>
     </title>
 
