edit to headed type Coding and Food in index page.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         I also can't ignore the impact AI is having on the world.
         </p>
 
-    <h>Coding and Food</h>
+    <h1>Coding and Food</h>
     <p></p>
 
 </body>
