--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
         h1 {
             color: rgb(0, 0, 0);
             text-align: center;
+            font-size: 20px;
         }
         p {
             color: rgb(0, 0, 0);
