edits to game instructions p text and css align properties tests.

--- a/pong.html
+++ b/pong.html
@@ -11,9 +11,11 @@
             overflow: hidden;
             height: 100%;
             background-color: pink;
+            text-align: center;
         }
         canvas {
             display: block;
+            text-align: center;
         }
     </style>
 </head>
@@ -21,7 +23,7 @@
     <a href="./index.html">Home</a>
     <a href="./projects.html">Projects</a>
     <a href="./pong.html">Play Pong</a>
-    <p>To play move the W and S keys for the left side platform and the Up and Down arrow keys for the right hand platform.</p>
+    <p>To play move the W and S keys for the left paddle and the Up and Down arrow keys for the right paddle.</p>
 
     <canvas id="pongCanvas"></canvas>
     <script>
