added p text align in style editor.

--- a/pong.html
+++ b/pong.html
@@ -17,6 +17,10 @@
             display: block;
             text-align: center;
         }
+
+        p, html {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
