pong p text edits.

--- a/pong.html
+++ b/pong.html
@@ -27,7 +27,7 @@
     <a href="./index.html">Home</a>
     <a href="./projects.html">Projects</a>
     <a href="./pong.html">Play Pong</a>
-    <p>To play move the W and S keys for the left paddle and the Up and Down arrow keys for the right paddle.</p>
+    <p>To play use the W and S keys to move the left paddle and the Up and Down arrow keys to move the right paddle.</p>
 
     <canvas id="pongCanvas"></canvas>
     <script>
