changed background colour of index and projects files. trying to text align center projects file code.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
 
         body {
-            background-color: #ffffff;
+            background-color: #FFFDFA;
             text-align: center; 
         }
         h1 {
