--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <title>
     <style>
          body {
-            background-color: #ffffff;
+            background-color: #FFFDFA;
             text-align: center; 
         }
         h1 {
@@ -26,6 +26,13 @@
     <a href="./projects.html">Projects</a>
     <a href="./pong.html">Play Pong</a>
 
+    <h1>
+    Project 1
+    </h1>
+
+    <h1>
+    Project 2
+    </h1>
 
 </body>
 
