css adjustments and html layout edits moved </head> moved </title>

--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>
+    <title> </title>
     <style>
          body {
             background-color: #FFFDFA;
@@ -19,7 +19,7 @@
             font-size: 16px;
         }
     </style>
-    </title>
+</head>
 
 <body>
     <a href="./index.html">Home</a>
@@ -36,5 +36,4 @@
 
 </body>
 
-</head>
 </html>
