--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>FAC Application Website - Fenella Edwards</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width-device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Founders and Coders Application Website - Fenella Edwards</title>
     <style>
 
         body {
