adding test photo to images folder plus adding div element and comments to index html file

--- a/index.html
+++ b/index.html
@@ -27,30 +27,35 @@
 </head>
 
 <body>
-    <a href="./index.html">Home</a>
-    <a href="./projects.html">Projects</a>
-    <a href="./pong.html">Play Pong</a>
+    <div>
+        <!-- Banner Section-->
+      <a href="./index.html">Home</a>
+      <a href="./projects.html">Projects</a>
+      <a href="./pong.html">Play Pong</a>
 
-    <h1>About Me</h1>
-    <p> text here</p>
+      <h1>About Me</h1>
+      <p> text here</p>
+    </div>
     
-    <h1>See my work so far</h1>
-    <p>I host my website <a href="https://www.fenellafoodie.com" target="_blank">Fenella Foodie</a> using 
+    <div>
+        <!-- Main application content section-->
+      <h1>See my work so far</h1>
+        <p>I host my website <a href="https://www.fenellafoodie.com" target="_blank">Fenella Foodie</a> using 
         first Squarespace and now Shopify. more text here. 
-    <p>Fenella Foodie Instagram</p>
-    <p>YouTube Channel</p>
+        <p>Fenella Foodie Instagram</p>
+        <p>YouTube Channel</p>
 
-    <h1>What can i offer the course?</h1>
-    <p></p>
+      <h1>What can i offer the course?</h1>
+        <p></p>
 
-    <h1>What would i like to achieve?</h1>
-    <p>At this stage i have a number of ideas about how i want to apply the skills i develop on the FAC course. 
+      <h1>What would i like to achieve?</h1>
+        <p>At this stage i have a number of ideas about how i want to apply the skills i develop on the FAC course. 
         DevOps, full-stack engineering, Cloud engineering and website development are some of them. 
         I also can't ignore the impact AI is having on the world.
         </p>
 
-    <h1>Coding and Food</h1>
-    <p></p>
-
+      <h1>Coding and Food</h1>
+        <p></p>
+    </div>
 </body>
 </html>
