starting to play around with css edits

--- a/pong.html
+++ b/pong.html
@@ -6,23 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     <title>Pong Game with Faster Ball</title>
+    <link rel="stylesheet" href="./resources/css/index.css">
+    
     <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            height: 100%;
-            background-color: pink;
-            text-align: center;
-        }
-        canvas {
-            display: block;
-            text-align: center;
-        }
-
-        p, html {
-            text-align: center;
-        }
     </style>
 </head>
 <body>
