--- a/index.html
+++ b/index.html
@@ -7,34 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     <title>Founders and Coders Application Website - Fenella Edwards</title>
-    <style>
+    <link rel="stylesheet" href="./resources/css/index.css">
 
-        body {
-            background-color: #FFFDFA;
-            text-align: center; 
-        }
-        h1 {
-            color: rgb(0, 0, 0);
-            text-align: center;
-            font-size: 20px;
-        }
-        p {
-            color: rgb(0, 0, 0);
-            text-align: center;
-            font-family: Arial, sans-serif;
-            font-size: 16px;
-        }
+    <style> 
     </style>
 </head>
 
 <body>
-    <div>
+    <div class="banner">
         <!-- Banner Section-->
       <a href="./index.html">Home</a>
       <a href="./projects.html">Projects</a>
       <a href="./pong.html">Play Pong</a>
 
       <h1>About Me</h1>
+      <img src="./resources/images/photoOfFenella.png" alt="">
       <p> text here</p>
     </div>
     
@@ -43,6 +30,7 @@
       <h1>See my work so far</h1>
         <p>I host my website <a href="https://www.fenellafoodie.com" target="_blank">Fenella Foodie</a> using 
         first Squarespace and now Shopify. more text here. 
+        <button>Visit my Fenella Foodie website</button>
         <p>Fenella Foodie Instagram</p>
         <p>YouTube Channel</p>
 
