--- a/projects.html
+++ b/projects.html
@@ -6,22 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Projects</title>
+    <link rel="stylesheet" href="./resources/css/index.css">
+
     <style>
-         body {
-            background-color: #FFFDFA;
-            text-align: center; 
-        }
-        h1 {
-            color: rgb(0, 0, 0);
-            text-align: center;
-            font-size: 20px;
-        }
-        p {
-            color: rgb(0, 0, 0);
-            text-align: center;
-            font-family: Arial, sans-serif;
-            font-size: 16px;
-        }
     </style>
 </head>
 
