changed size of profile photo and linked it to css via an id class

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <a href="./pong.html">Play Pong</a>
 
       <h1>About Me</h1>
-      <img src="./resources/images/photoOfFenella.png" alt="">
+      <!-- Below trying out id class as specific image with unique css requirements?-->
+      <img id="small-profile-photo" src="./resources/images/photoOfFenella.png" alt="">
       <p> text here</p>
     </div>
     
