more css changes

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 </head>
 
 <body>
-    <div class="banner">
+    <div class="menu">
+      <!--Menu section-->
+      <a href="./index.html">HOME</a>
+      <a href="./projects.html">PROJECTS</a>
+      <a href="./pong.html">PLAY PONG</a>
+    </div>
+    </div><div class="banner">
         <!-- Banner Section-->
-      <a href="./index.html">Home</a>
-      <a href="./projects.html">Projects</a>
-      <a href="./pong.html">Play Pong</a>
-
       <h1>About Me</h1>
       <!-- Below trying out id class as specific image with unique css requirements?-->
       <img id="small-profile-photo" src="./resources/images/photoOfFenella.png" alt="">
