--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
 <body>
     <div class="menu">
       <!--Menu section-->
-      <a href="./index.html">HOME</a>
-      <a href="./projects.html">PROJECTS</a>
-      <a href="./pong.html">PLAY PONG</a>
+      <table>
+        <tr>
+          <td><a href="./index.html">HOME</a></td>
+          <td><a href="./projects.html">PROJECTS</a></td>
+          <td><a href="./pong.html">PLAY PONG</a></td>
+        </tr>
+      </table>
     </div>
+
     </div><div class="banner">
         <!-- Banner Section-->
       <h1>About Me</h1>
