don't like the table in the menu section deleted it also changed div to nav element to align with navigation section of page

--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
 </head>
 
 <body>
-    <div class="menu">
+    <nav class="menu">
       <!--Menu section-->
-      <table>
-        <tr>
-          <td><a href="./index.html">HOME</a></td>
-          <td><a href="./projects.html">PROJECTS</a></td>
-          <td><a href="./pong.html">PLAY PONG</a></td>
-        </tr>
-      </table>
-    </div>
+      <a href="./index.html">HOME</a>
+      <a href="./projects.html">PROJECTS</a>
+      <a href="./pong.html">PLAY PONG</a>
+    </nav>
 
     </div><div class="banner">
         <!-- Banner Section-->
