--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
   <header>
     <nav>
-      <ul>
-        <li><a href="./index.html">HOMEPAGE</a></li>
-        <li><a href="./projects.html">PROJECTS</a></li>
-        <li><a href="./pong.html">PLAY PONG</a></li>
+      <ul class="header">
+        <li class="header"><a href="./index.html">HOMEPAGE</a></li>
+        <li class="header"><a href="./projects.html">PROJECTS</a></li>
+        <li class="header"><a href="./pong.html">PLAY PONG</a></li>
       </ul>
     </nav>
   </header>
