aligning css across my site

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width-device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
-    <title>Founders and Coders Application Website - Fenella Edwards</title>
-    <link rel="stylesheet" href="./resources/css/index.css">
+  <title>Founders and Coders Application Website - Fenella Edwards</title>
+  <link rel="stylesheet" href="./resources/css/index.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
     <!--Fixed column below:-->
     <div class="fixed-column">
         <h1>Hi, i'm Fenella</h1>
-      <h3>I'm training to be a software developer.</h3>
+      <h3>I'm training to be a software developer. Welcome to my FAC Application Website.</h3>
       <!-- Below trying out id class as specific image with unique css requirements?-->
       <img id="small-profile-photo" src="./resources/images/photoOfFenella.png" alt="">
     </div>
@@ -46,8 +46,7 @@
           how to apply them until FAC introduced me to Github in September. I have designed and published 
           multiple websites over a number of years for work and for projects. My current website is a 
           profile and portfolio i use for my chef services and supper club events. It is hosted by Shopify.
-          In the past i have also hosted websites using Squarespace and Wordpress. 
-          (add more).
+          In the past i have also hosted websites using Squarespace and Wordpress.
         </p>
         <button>Visit my Fenella Foodie website</button>
         <p>
