--- a/pong.html
+++ b/pong.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width-device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
-    <title>Pong Game with Faster Ball</title>
-    <link rel="stylesheet" href="./resources/css/index.css">
-    
-    <style>
-    </style>
+  <title>Pong Game with Faster Ball</title>
+  <link rel="stylesheet" href="./resources/css/index.css">
 </head>
+
 <body>
+  <header>
     <a href="./index.html">Home</a>
     <a href="./projects.html">Projects</a>
     <a href="./pong.html">Play Pong</a>
     <p>To play use the W and S keys to move the left paddle and the Up and Down arrow keys to move the right paddle.</p>
-
+  </header>
     <canvas id="pongCanvas"></canvas>
     <script>
         const canvas = document.getElementById('pongCanvas');
