--- a/projects.html
+++ b/projects.html
@@ -1,30 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <title>Projects</title>
-    <link rel="stylesheet" href="./resources/css/index.css">
-
-    <style>
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width-device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  
+  <title>Projects</title>
+  <link rel="stylesheet" href="./resources/css/index.css">
 </head>
 
 <body>
-    <a href="./index.html">Home</a>
-    <a href="./projects.html">Projects</a>
-    <a href="./pong.html">Play Pong</a>
-
-    <h1>
-    Project 1
-    </h1>
-
-    <h1>
-    Project 2
-    </h1>
+  <header>
+    <nav>
+      <ul class="header">
+        <li class="header"><a href="./index.html">HOMEPAGE</a></li>
+        <li class="header"><a href="./projects.html">PROJECTS</a></li>
+        <li class="header"><a href="./pong.html">PLAY PONG</a></li>
+      </ul>
+    </nav>
+  </header>
+   
+  <main>
+    <section>
+      <!--Fixed column below:-->
+      <div class="fixed-column">
+          <h1>Projects</h1>
+        <h3>Find out more about my work and projects.</h3>
+      </div>
+      
+      <!--Scrollable column below:-->
+      <div class="scrollable-column">
+        
+      </div>
+    </section>
+    </main>
+  
+    <footer>@ Fenella Edwards 2024</footer>
+  </body>
+  <style type="text/css"></style>
 
 </body>
-
 </html>
