--- a/index.html
+++ b/index.html
@@ -44,16 +44,17 @@
       <h1>My software development journey so far</h1>
         <p>I have taken a number of basic HTML and CSS courses over the years but haven't ever learned 
           how to apply them until FAC introduced me to Github in September. I have designed and published 
-          multiple websites over a number of years for work and for projects. My current website is a 
-          profile and portfolio i use for my chef services and supper club events. It is hosted by Shopify.
-          In the past i have also hosted websites using Squarespace and Wordpress.
+          multiple websites for work and for projects. My current website is a profile and portfolio i 
+          use for my chef services and supper club events. It is hosted by Shopify. In the past i have 
+          also hosted websites using Squarespace and Wordpress.
         </p>
         <button>Visit my Fenella Foodie website</button>
         <p>
           In September I began my software development journey. FAC set me up on Discord and Github. Sean
           gave me a crash course in command line, git and the terminal. I signed up to Codecademy and began 
-          learning Javascript. Fast forward to November and i was ready to play JavaScript Codewars kata, build
-          my first website and start learning about coding games.
+          two courses "Javascript" and "Build a Website with HTML, CSS and Github pages". Fast forward to 
+          November and i was ready to play JavaScript Codewars kata, start building my first website and 
+          start learning about coding games.
         </p>
       <h1>JavaScript</h1>
         <p>Learning JavaScript in two months has been my biggest challenge with regards my application to FAC.
@@ -65,7 +66,9 @@
           kata. For example: 
         </p>
       <h1>Website</h1>
-        <p>This website is built using HTML, CSS and vanilla JavaScript. etc. </p>
+        <p>This website is built using HTML, CSS and vanilla JavaScript. I always enjoyed designing websites and 
+          I am loving now knowing which tools i need to put together a website without using a host platform.
+        You can see I have used tables, colors, typography, display and positioning,  </p>
       <h1>Game</h1>
         <p></p>
       
