more css for pong game

--- a/pong.html
+++ b/pong.html
@@ -21,7 +21,7 @@
     <p>To play Pong use the W and S keys to move the left paddle and the Up and Down arrow keys to move the right paddle.</p>
   </header>
 
-    <canvas id="pongCanvas"> class="pongcanvas"</canvas>
+    <canvas id="pongCanvas" class="pongcanvas"></canvas>
     <script>
         const canvas = document.getElementById('pongCanvas');
         const ctx = canvas.getContext('2d');
