--- a/index.html
+++ b/index.html
@@ -36,44 +36,66 @@
     <div class="scrollable-column">
       <h1>Contact Me</h1>
         <ul>
-          <li>fenellaedwards@hotmail.com</li>
-          <li>Github</li>
-          <li>LinkedIn</li>
+          <li>Email me at fenellaedwards@hotmail.com</li>
+          <li><a href="https://github.com/Fe-Edwards" target="_blank">Github</a></li>
+          <li><a href="https://www.linkedin.com/in/fenellaedwards/" target="_blank">LinkedIn</a></li>
         </ul>
       
       <h1>My software development journey so far</h1>
-        <p>I have taken a number of basic HTML and CSS courses over the years but haven't ever learned 
-          how to apply them until FAC introduced me to Github in September. I have designed and published 
-          multiple websites for work and for projects. My current website is a profile and portfolio i 
-          use for my chef services and supper club events. It is hosted by Shopify. In the past i have 
-          also hosted websites using Squarespace and Wordpress.
+        <p>I have taken a couple of basic HTML and CSS courses over the years. Learning to use Github
+          with Founders and Coders since September 2024, I have been able to apply this knowledge. 
+          I have enjoyed designing and publishing multiple websites for work and for projects.
+          My current website is a profile and portfolio i use for my chef services and supper club events.
+          It is hosted by Shopify. In the past i have also hosted websites using Squarespace and
+          Wordpress.
         </p>
-        <button>Visit my Fenella Foodie website</button>
+        <a href="https://www.fenellafoodie.com" target="_blank"><button class="button">Visit my Fenella Foodie website</button></a>
         <p>
-          In September I began my software development journey. FAC set me up on Discord and Github. Sean
-          gave me a crash course in command line, git and the terminal. I signed up to Codecademy and began 
-          two courses "Javascript" and "Build a Website with HTML, CSS and Github pages". Fast forward to 
-          November and i was ready to play JavaScript Codewars kata, start building my first website and 
-          start learning about coding games.
+          In September I began my software development journey. FAC set me up on Discord and Github. The FAC 
+          Tuesday meet-up community gave me a crash course in command line, git and the terminal. 
+          I signed up to Codecademy and began two courses: "Javascript" and "Build a Website with HTML, 
+          CSS and Github pages". Fast forward to November and i was ready to play JavaScript Codewars kata, 
+          start building my first website and start learning about coding games.
+          <br>
+          I am grateful to have been able to study with the FAC community (meetups and Discord channel). I have 
+          learned a lot from alumni and stay in touch with them through Github, Discord and LinkedIn. 
         </p>
+
       <h1>JavaScript</h1>
         <p>Learning JavaScript in two months has been my biggest challenge with regards my application to FAC.
           I signed up to a Codecademy course (before i knew about the Freecodecamp courses) and put in 
           the hours to complete the course. You can view my certificate here. Next step: applying my new 
           JavaScript skills to Codewars kata. To begin with Codewars made no sense to me so i watched Youtube videos 
-          of people solving JavaScript kata's. I would also use chat GPT in two ways: 1. Entering the entire kata
+          of people solving JavaScript kata's. I also use MDN Web Docs as a reference and chat GPT as a learning tool: 
+          1. Entering the entire kata
           when all else had failed and 2. breaking down the kata and asking chat GPT to help me with one step of the 
-          kata. For example: 
+          kata. My work to learn data structures, debugging, algorithm scripting, ES6 and more is ongoing.
         </p>
+
       <h1>Website</h1>
         <p>This website is built using HTML, CSS and vanilla JavaScript. I always enjoyed designing websites and 
-          I am loving now knowing which tools i need to put together a website without using a host platform.
-        You can see I have used tables, colors, typography, display and positioning,  </p>
+          I am loving now knowing which tools i need to put together a website without using a host platform. 
+          To work on my website I use VS Code editor, Chrome DevTools, the command line, terminal, and git.
+          The site is hosted by Github pages and you should be able to view the repository and code on my 
+          <a href="https://github.com/Fe-Edwards" target="_blank">Github profile</a>. 
+          <br>
+          The design of this site is inspired by the site of an FAC alumni. It is a work in progress and you can 
+          see I have created a page for projects and a page for a game. I am developing my CSS skillset and 
+          working my way through a Codecademy course, still to cover advanced CSS: flexbox and CSS transitions. 
+          </p>
+
       <h1>Game</h1>
-        <p></p>
+        <p>If you navigate to the top of this page you will find a link to "Play Pong". My approach to learning how
+          to make games has been to take a game (this one is from the FAC github planning repository), pull it apart, 
+          and re-build it. Pong is a work in progress. </p>
       
       <h1>What can i offer the course?</h1>
-        <p></p>
+        <p>I am a chef, which i love, but i am looking for a career change that will 
+          keep me off my feet and still allow me to be creative and solve problems. I have worked in corporate 
+          and domestic kitchens. Cooking at weddings in tents and having to wash up using the garden hose has
+          taught me to always hold on to my sense of humor. Along with my new software development skills and 
+          a stellar carrot cake recipe, I can bring a hardworking and professional approach to this course. 
+        </p>
 
       <h1>What would i like to achieve?</h1>
         <p>At this stage i have a number of ideas about how i want to apply the skills i develop on the FAC course. 
