edits to images and links

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
       <h1>JavaScript</h1>
         <p>Learning JavaScript in two months has been my biggest challenge with regards my application to FAC.
           I signed up to a Codecademy course (before i knew about the Freecodecamp courses) and put in 
-          the hours to complete the course. You can view my certificate here. Next step: applying my new 
+          the hours to complete the course. You can view my certificate here: </p>
+          <img src="./resources/images/2024.12CcJavaScriptCert.png"> 
+          <br>
+          <p>Next step: applying my new 
           JavaScript skills to Codewars kata. To begin with Codewars made no sense to me so i watched Youtube videos 
           of people solving JavaScript kata's. I also use MDN Web Docs as a reference and chat GPT as a learning tool: 
           1. Entering the entire kata
