changed profile photo from id to class because it isn't loading well from github pages to the web

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Hi, i'm Fenella</h1>
       <h3>I'm training to be a software developer. Welcome to my FAC Application Website.</h3>
       <!-- Below trying out id class as specific image with unique css requirements?-->
-      <img id="small-profile-photo" src="./resources/images/photoOfFenella.png" alt="">
+      <img class="smallProfilePhoto" src="./resources/images/photoOfFenella.png" alt="">
     </div>
     
     <!--Scrollable column below:-->
