edit to content in website section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <br>
           The design of this site is inspired by the site of an FAC alumni. It is a work in progress and you can 
           see I have created a page for projects and a page for a game. I am developing my CSS skillset and 
-          working my way through a Codecademy course, still to cover advanced CSS: flexbox and CSS transitions. 
+          working my way through a Codecademy course, still to cover responsive design, advanced CSS: flexbox and CSS transitions. 
           </p>
 
       <h1>Game</h1>
