edits to image elements

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Hi, i'm Fenella</h1>
       <h3>I'm training to be a software developer. Welcome to my FAC Application Website.</h3>
       <!-- Below trying out id class as specific image with unique css requirements?-->
-      <img class="smallProfilePhoto" src="./resources/images/photoOfFenella.png" alt="">
+      <img class="smallProfilePhoto" src="./resources/images/photoOfFenella.png"/>
     </div>
     
     <!--Scrollable column below:-->
@@ -65,7 +65,7 @@
         <p>Learning JavaScript in two months has been my biggest challenge with regards my application to FAC.
           I signed up to a Codecademy course (before i knew about the Freecodecamp courses) and put in 
           the hours to complete the course. You can view my certificate here: </p>
-          <img src="./resources/images/2024.12CcJavaScriptCert.png"> 
+          <img src="./resources/images/2024.12CcJavaScriptCert.png"/> 
           <br>
           <p>Next step: applying my new 
           JavaScript skills to Codewars kata. To begin with Codewars made no sense to me so i watched Youtube videos 
