justify fixed column text and edit content

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!--Fixed column below:-->
     <div class="fixed-column">
         <h1>Hi, i'm Fenella</h1>
-      <h3>I'm training to be a software developer. Welcome to my FAC Application Website.</h3>
+      <h3>I'm training to be a software developer. Welcome to my Founders and Coders Application Website.</h3>
       <!-- Below trying out id class as specific image with unique css requirements?-->
       <img class="smallProfilePhoto" src="./resources/images/photoOfFenella.png"/>
     </div>
